syntax = "proto3";

// Use convenience types defined and published as a package by Google
import "google/protobuf/empty.proto";

// Specify the directory where the code is automatically generated
// option go_package = "./";
option go_package = "../server-go/pb";

// Specify package name to avoid name collision
package like;

// Method definition
service LikeService {
  // create 
  rpc Create (Like) returns (Like) {}

  // update 
  rpc Update (Like) returns (LikeBoolResponse) {}

  // delete
  rpc Delete (LikeIdRequest) returns (LikeBoolResponse) {}

  // get by id
  rpc GetById (LikeIdRequest) returns (Like) {}

  // get by user
  rpc GetListByUser (LikeUserIdRequest) returns (LikeList) {}

  // get by content
  rpc GetListByContent (LikeContentIdRequest) returns (LikeList) {}

  // get list by id list
  rpc GetListByIdList (LikeIdListRequest) returns (LikeList) {}

  // get all
  rpc GetAll (google.protobuf.Empty) returns (LikeList) {}
}

// ユーザー情報を表すメッセージ型
message Like {
  int64 id = 1;
  string uuid = 2;
  int64 content_id = 3;
  int64 user_id = 4;
  string created_at = 5;
  string updated_at = 6;
}

message LikeList {
  repeated Like like = 1;
}

// request
message LikeIdRequest {
  int64 id = 1;
}

message LikeIdListRequest {
  repeated int64 id = 1;
}

message LikeUserIdRequest {
  int64 user_id = 1;
}

message LikeContentIdRequest {
  int64 content_id = 1;
}

message LikeUserIdAndContentIdRequest {
  int64 user_id = 1;
  int64 content_id = 2;
}

// response
message LikeBoolResponse {
  bool error = 1;
}